--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "fcntl.h": "c",
         "_default_fcntl.h": "c",
         "boot_info.h": "c",
-        "cpu.h": "c"
+        "cpu.h": "c",
+        "irq.h": "c",
+        "os_cfg.h": "c"
     },
 }
