--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "cpu.h": "c",
         "irq.h": "c",
         "os_cfg.h": "c",
-        "cpu_instr.h": "c"
+        "cpu_instr.h": "c",
+        "klib.h": "c"
     },
 }
